--- a/views/card.pug
+++ b/views/card.pug
@@ -2,10 +2,13 @@ extends layout.pug
 
 block content
     section#content 
-        h2= prompt 
-        if hint
+        h2= text 
+        if hint && side === 'question'
             p   
                 i Hint: #{hint}
+            a(href=`${id}?side=answer`) Answer
         else 
             p There is no hint
-    
+            a(href=`${id}?side=question`) Question 
+        br
+        a(href=`/cards`) Next Card           
