--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,5 @@ extends layout.pug
 
 block content
     body 
-        h1 Welcome #{name} 
-        p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, maxime labore. Iure ab aut blanditiis, odit explicabo repudiandae, inventore quas similique quibusdam accusamus aliquam hic voluptatibus expedita modi dolores rem.
-        form(action="/goodbye", method="post")
-            button(type="submit") Good Bye 
+        p
+            a(href=`/cards`) Begin
