--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,15 @@
 doctype html 
 html(lang="en")
     include includes/head.pug
+    if(name)
+        .welcome(class="container")
+            h1 Welcome #{name} 
+                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, maxime labore. Iure ab aut blanditiis, odit explicabo repudiandae, inventore quas similique quibusdam accusamus aliquam hic voluptatibus expedita modi dolores rem.
+                form(action="/goodbye", method="post")
+                    button(type="submit") Good Bye 
     body
-        block content 
-    include includes/footer.pug
+        .content(class="container")
+            block content 
+    .container
+        include includes/footer.pug
     
